# aiohttp

./: .appveyor.yml  .bumpversion.cfg  .cherry_picker.toml  .clabot  .codecov.yml  .coveragerc  .coveragerc-cython.toml  .coveragerc.toml  .coveralls.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .mypy.ini  .pip-tools.toml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  1.py  2.py  3.py  4.py  AGENTS.md  CHANGES.rst  CHANGES.txt  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  CONTRIBUTORS.txt  DEPRECATIONS.rst  HISTORY.rst  ISSUE_TEMPLATE.md  LICENSE.txt  MANIFEST.in  Makefile  NEW_ROUTER.txt  (+32 more)
.azure-pipelines/: ci.yml  deploy.yml  stage-lint.yml  stage-test.yml
.dependabot/: config.yml
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codeql.yml  config.yml  copilot-instructions.md  dependabot.yml  lock.yml  main.workflow
.travis/: install.sh  run.sh
CHANGES/: .TEMPLATE.rst  .gitignore  10003.bugfix.rst  10014.misc.rst  10028.feature.rst  10029.misc.rst  10030.misc.rst  10037.misc.rst  10043.misc.rst  10047.bugfix.rst  10049.misc.rst  10055.bugfix.rst  10055.misc.rst  10067.misc.rst  10073.misc.rst  10074.feature.rst  10076.bugfix.rst  10089.bugfix.rst  10093.bugfix.rst  10099.bugfix.rst  10101.bugfix.rst  10102.bugfix.rst  10113.bugfix.rst  10119.bugfix.rst  10120.feature.rst  10125.bugfix.rst  10137.misc.rst  10142.bugfix.rst  10146.misc.rst  10149.misc.rst  10154.bugfix.rst  10156.feature.rst  10167.bugfix.rst  10168.bugfix.rst  10169.bugfix.rst  10270.bugfix.rst  10281.contrib.rst  10300.feature.rst  10301.doc.rst  10304.doc.rst  (+1508 more)
aiohttp/: .web_response.py.swo  Dockerfile  __init__.py  _client_reqrep.pyx  _cookie_helpers.py  _cparser.pxd  _find_header.c  _frozenlist.pyx  _headers.pxi  _helpers.pyi  _http_parser.pyx  _http_websocket_helpers.py  _http_websocket_models.py  _http_websocket_reader.py  _http_websocket_writer.py  _http_writer.pyx  _llhttp_wasm_shim.c  _multidict.pyx  _parser.pyx  _version.py  _websocket.pyx  _websocket_helpers.py  _websocket_reader.pxd  _websocket_reader.py  _websocket_writer.py  _ws_impl.py  abc.py  autoreload.py  backport_cookies.py  base_protocol.py  client.py  client_exceptions.py  client_middleware_digest_auth.py  client_middlewares.py  client_proto.py  client_reqrep.py  client_utils.py  client_ws.py  cluster.py  compression.py  (+82 more)
asynchttp/: __init__.py  client.py  errors.py  parsers.py  protocol.py  server.py  session.py  test_utils.py  utils.py  websocket.py  worker.py  wsgi.py
benchmark/: async.py  multidict.py  prof.py  requirements.txt
build-aiohttp/: .travis.yml  LICENSE.md  README.rst  setup.cfg  setup.py
build_aiohttp/: .gitignore  setup.py
changes/: 1128.feature  1198.feature  1699.bugfix  1811.doc  1828.feature  1993.feature  1994.feature  1995.feature  1997.feature  1998.feature  2001.feature  2004.feature  2005.feature  2006.removal  2008.feature  2009.feature  2013.misc  2014.misc  2018.doc  2024.feature  2026.feature  2030.feature  2032.feature  2039.doc  2042.feature  2048.misc  2058.feature  2060.bugfix  2063.bugfix  2072.doc  2081.doc  2084.bugfix  2085.doc  2092.feature  2094.misc  2104.bugfix  2106.bugfix  2110.feature  2111.feature  2112.bugfix  (+45 more)
demos/: README.rst
docs/: Makefile  abc.rst  aiohttp_doctools.py  api.rst  built_with.rst  changes.rst  client.rst  client_advanced.rst  client_middleware_cookbook.rst  client_quickstart.rst  client_reference.rst  client_websockets.rst  conf.py  contributing-admins.rst  contributing.rst  deployment.rst  essays.rst  examples.rst  external.rst  faq.rst  glossary.rst  gunicorn.rst  history.rst  http_request_lifecycle.rst  index.rst  logging.rst  make.bat  migration.rst  migration_to_2xx.rst  misc.rst  multidict.rst  multipart.rst  multipart_reference.rst  new_router.rst  options.rst  powered_by.rst  python33.rst  security.rst  server.rst  signals.rst  (+22 more)
examples/: background_tasks.py  basic_auth_middleware.py  basic_srv.py  cache_example.py  cli_app.py  client_auth.py  client_background_tasks.py  client_json.py  client_middleware_auth.py  client_middleware_cookbook.py  client_middleware_ssrf.py  client_ws.py  combined_middleware.py  crawl.py  curl.py  digest_auth_qop_auth.py  digest_auth_qop_auth_int.py  fake_server.py  gunicorn_worker.py  json_data.py  ktls_static_file.py  logging_middleware.py  lowlevel_srv.py  mpsrv.py  rate_limit_middleware.py  retry_middleware.py  server.crt  server.csr  server.key  server_simple.py  srv.py  sse_basic.py  sse_topics.py  static_files.py  tcp_protocol_parser.py  token_refresh_middleware.py  web_app.py  web_classview.py  web_classview1.py  web_cookies.py  (+10 more)
fortunate_pkg/: __init__.py
fuzzers/: fuzz_http_parser.py  fuzz_payload_url.py  http_parser.py  http_payload_parser.py  multipart.py  payload_url.py  web_request.py
requirements/: base-ft.in  base-ft.txt  base.in  base.txt  broken-projects.in  ci-wheel.txt  ci.txt  constraints.in  constraints.txt  cython.in  cython.txt  dev.in  dev.txt  doc-spelling.in  doc-spelling.txt  doc.in  doc.txt  flake.txt  lint.in  lint.txt  multidict.txt  pip-tools.txt  runtime-deps.in  runtime-deps.txt  sync-direct-runtime-deps.py  test-common-base.in  test-common-base.txt  test-common.in  test-common.txt  test-ft.in  test-ft.txt  test-mobile.in  test-mobile.txt  test.in  test.txt  towncrier.txt  typing-extensions.in  typing-extensions.txt  wheel.txt
tests/: .#test_connector.py  .test_web_sendfile_functional.py.swo  _pytest_plugin.py  autoreloadapp.py  conftest.py  data.unknown_mime_type  fuzz_http_parser.py  fuzz_payload_url.py  github-urls.json  hello.txt.br  http_client_functional_test.py  http_client_test.py  http_parser_test.py  http_protocol_test.py  http_server_test.py  http_session_test.py  http_websocket_test.py  http_wsgi_test.py  mitmdump_script.py  parsers_test.py  post_data.txt  sample.crt.der  test___all__.py  test_base_protocol.py  test_benchmarks_client.py  test_benchmarks_client_request.py  test_benchmarks_client_ws.py  test_benchmarks_cookiejar.py  test_benchmarks_http_writer.py  (+138 more)
(+167 files in other folders)
