[metadata]
name = aiohttp
version = attr: aiohttp.__version__
url = https://github.com/aio-libs/aiohttp
project_urls =
  Chat: Gitter = https://gitter.im/aio-libs/Lobby
  CI: GitHub Actions = https://github.com/aio-libs/aiohttp/actions?query=workflow%%3ACI
  Coverage: codecov = https://codecov.io/github/aio-libs/aiohttp
  Docs: Changelog = https://docs.aiohttp.org/en/stable/changes.html
  Docs: RTD = https://docs.aiohttp.org
  GitHub: issues = https://github.com/aio-libs/aiohttp/issues
  GitHub: repo = https://github.com/aio-libs/aiohttp
description = Async http client/server framework (asyncio)
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache 2
license_files = LICENSE.txt
classifiers =
  Development Status :: 5 - Production/Stable

  Framework :: AsyncIO

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

  Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.7
packages = find:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = False
include_package_data = True

install_requires =
  charset-normalizer >=2.0, < 4.0
  multidict >=4.5, < 7.0
  async_timeout >= 4.0, < 5.0
  asynctest == 0.13.0; python_version<"3.8"
  yarl >= 1.0, < 2.0
  typing_extensions >= 3.7.4; python_version<"3.8"
  frozenlist >= 1.1.1
  aiosignal >= 1.1.2

[options.exclude_package_data]
* =
    *.c
    *.h

[options.extras_require]
speedups =
  aiodns >= 1.1
  Brotli
  cchardet; python_version < "3.10"

[options.packages.find]
exclude =
  examples

[options.package_data]
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
# (see notes for the asterisk/`*` meaning)
* =
    *.so

[pep8]
max-line-length=79

[easy_install]
zip_ok = false

[flake8]
# TODO: don't disable D*, fix up issues instead
ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811,D1,D4
max-line-length = 88

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True

known_third_party=jinja2,pytest,multidict,yarl,gunicorn,freezegun
known_first_party=aiohttp,aiohttp_jinja2,aiopg

[report]
exclude_lines =
    @abc.abstractmethod
    @abstractmethod

[tool:pytest]
addopts =
    # show 10 slowest invocations:
    --durations=10

    # a bit of verbosity doesn't hurt:
    -v

    # report all the things == -rxXs:
    -ra

    # show values of the local vars in errors:
    --showlocals

    # `pytest-cov`:
    --cov=aiohttp
    --cov=tests/

    # run tests that are not marked with dev_mode
    -m "not dev_mode"
filterwarnings =
    error
    ignore:module 'ssl' has no attribute 'OP_NO_COMPRESSION'. The Python interpreter is compiled against OpenSSL < 1.0.0. Ref. https.//docs.python.org/3/library/ssl.html#ssl.OP_NO_COMPRESSION:UserWarning
    ignore:unclosed transport <asyncio.sslproto._SSLProtocolTransport object.*:ResourceWarning
    ignore:unclosed transport <_ProactorSocketTransport closing fd=-1>:ResourceWarning
    ignore:Unclosed client session <aiohttp.client.ClientSession object at 0x:ResourceWarning
    ignore:The loop argument is deprecated:DeprecationWarning:asyncio
    ignore:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning::
    # The following deprecation warning is triggered by importing
    # `gunicorn.util`. Hopefully, it'll get fixed in the future. See
    # https://github.com/benoitc/gunicorn/issues/2840 for detail.
    ignore:module 'sre_constants' is deprecated:DeprecationWarning:pkg_resources._vendor.pyparsing
    # The deprecation warning below is happening under Python 3.11 and
    # is fixed by https://github.com/certifi/python-certifi/pull/199. It
    # can be dropped with the next release of `certify`, specifically
    # `certify > 2022.06.15`.
    ignore:path is deprecated. Use files.. instead. Refer to https.//importlib-resources.readthedocs.io/en/latest/using.html#migrating-from-legacy for migration advice.:DeprecationWarning:certifi.core
junit_suite_name = aiohttp_test_suite
norecursedirs = dist docs build .tox .eggs
minversion = 3.8.2
testpaths = tests/
junit_family=xunit2
xfail_strict = true
markers =
    dev_mode: mark test to run in dev mode.
