[metadata]
name = aiohttp
version = attr: aiohttp.__version__
url = https://github.com/aio-libs/aiohttp
project_urls =
  Chat: Matrix = https://matrix.to/#/#aio-libs:matrix.org
  Chat: Matrix Space = https://matrix.to/#/#aio-libs-space:matrix.org
  CI: GitHub Actions = https://github.com/aio-libs/aiohttp/actions?query=workflow%%3ACI
  Coverage: codecov = https://codecov.io/github/aio-libs/aiohttp
  Docs: Changelog = https://docs.aiohttp.org/en/stable/changes.html
  Docs: RTD = https://docs.aiohttp.org
  GitHub: issues = https://github.com/aio-libs/aiohttp/issues
  GitHub: repo = https://github.com/aio-libs/aiohttp
description = Async http client/server framework (asyncio)
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache 2
license_files = LICENSE.txt
classifiers =
  Development Status :: 5 - Production/Stable

  Framework :: AsyncIO

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13

  Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.9
packages =
  aiohttp
  aiohttp._websocket
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = False
include_package_data = True

install_requires =
  aiohappyeyeballs >= 2.3.0
  aiosignal >= 1.1.2
  async-timeout >= 4.0, < 6.0 ; python_version < "3.11"
  frozenlist >= 1.1.1
  multidict >=4.5, < 7.0
  propcache >= 0.2.0
  yarl >= 1.17.0, < 2.0

[options.exclude_package_data]
* =
    *.c
    *.h

[options.extras_require]
speedups =
  # required c-ares (aiodns' backend) will not build on windows
  aiodns >= 3.2.0; sys_platform=="linux" or sys_platform=="darwin"
  Brotli; platform_python_implementation == 'CPython'
  brotlicffi; platform_python_implementation != 'CPython'
  hyperscan >= 0.7.8; platform_python_implementation == 'CPython' and (sys_platform=="linux" or sys_platform=="darwin")

[options.packages.find]
exclude =
  examples

[options.package_data]
# Ref:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
# (see notes for the asterisk/`*` meaning)
* =
    *.so

[pep8]
max-line-length=79

[easy_install]
zip_ok = false

[flake8]
extend-select =
  B950,
  # NIC001 -- "Implicitly concatenated str literals on one line"
  NIC001,
  # NIC101 -- "Implicitly concatenated bytes literals on one line"
  NIC101,
# TODO: don't disable D*, fix up issues instead
ignore = N801,N802,N803,NIC002,NIC102,E203,E226,E305,W504,E252,E301,E302,E501,E704,W503,W504,D1,D4
max-line-length = 88
per-file-ignores =
    # I900: Shouldn't appear in requirements for examples.
    examples/*:I900

# flake8-requirements
known-modules = proxy.py:[proxy]
requirements-file = requirements/test.in
requirements-max-depth = 4

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True

known_third_party=jinja2,pytest,multidict,yarl,gunicorn,freezegun
known_first_party=aiohttp,aiohttp_jinja2,aiopg

[report]
exclude_lines =
    @abc.abstractmethod
    @abstractmethod

[tool:pytest]
addopts =
    # `pytest-xdist`:
    --numprocesses=auto

    # show 10 slowest invocations:
    --durations=10

    # a bit of verbosity doesn't hurt:
    -v

    # report all the things == -rxXs:
    -ra

    # show values of the local vars in errors:
    --showlocals

    # `pytest-cov`:
    -p pytest_cov
    --cov=aiohttp
    --cov=tests/

    # run tests that are not marked with dev_mode
    -m "not dev_mode"
filterwarnings =
    error
    ignore:module 'ssl' has no attribute 'OP_NO_COMPRESSION'. The Python interpreter is compiled against OpenSSL < 1.0.0. Ref. https.//docs.python.org/3/library/ssl.html#ssl.OP_NO_COMPRESSION:UserWarning
    ignore:Unclosed client session <aiohttp.client.ClientSession object at 0x:ResourceWarning
    ignore:The loop argument is deprecated:DeprecationWarning:asyncio
    ignore:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning::
    # The following deprecation warning is triggered by importing
    # `gunicorn.util`. Hopefully, it'll get fixed in the future. See
    # https://github.com/benoitc/gunicorn/issues/2840 for detail.
    ignore:module 'sre_constants' is deprecated:DeprecationWarning:pkg_resources._vendor.pyparsing
    # Deprecation warning emitted by setuptools v67.5.0+ triggered by importing
    # `gunicorn.util`.
    ignore:pkg_resources is deprecated as an API:DeprecationWarning
    # The deprecation warning below is happening under Python 3.11 and
    # is fixed by https://github.com/certifi/python-certifi/pull/199. It
    # can be dropped with the next release of `certify`, specifically
    # `certify > 2022.06.15`.
    ignore:path is deprecated. Use files.. instead. Refer to https.//importlib-resources.readthedocs.io/en/latest/using.html#migrating-from-legacy for migration advice.:DeprecationWarning:certifi.core
    # Dateutil deprecation warning already fixed upstream.
    # Can be dropped with the next release, `dateutil > 2.8.2`
    # https://github.com/dateutil/dateutil/pull/1285
    ignore:datetime.*utcfromtimestamp\(\) is deprecated and scheduled for removal:DeprecationWarning:dateutil.tz.tz
    # Tracked upstream and waiting for PR review
    # https://github.com/spulec/freezegun/issues/508
    # https://github.com/spulec/freezegun/pull/511
    ignore:datetime.*utcnow\(\) is deprecated and scheduled for removal:DeprecationWarning:freezegun.api
junit_suite_name = aiohttp_test_suite
norecursedirs = dist docs build .tox .eggs
minversion = 3.8.2
testpaths = tests/
xfail_strict = true
markers =
    dev_mode: mark test to run in dev mode.
    internal: tests which may cause issues for packagers, but should be run in aiohttp's CI.
